@@ -1,18 +1,16 @@
-package Lesson_6.demoQa;
-
+package Lesson_6.demoQa.Tests;
 
 import Lesson_6.core.BaseSeleniumTest;
 import Lesson_6.demoQa.Pages.*;
-import Lesson_6.readProperrties.ConfigProvider;
 import org.apache.hc.client5.http.classic.HttpClient;
 import org.apache.hc.client5.http.classic.methods.HttpGet;
 import org.apache.hc.client5.http.impl.classic.HttpClients;
 import org.apache.hc.core5.http.HttpResponse;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.PageFactory;
-
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.Arrays;
@@ -21,16 +19,7 @@ import java.util.stream.Collectors;
 
 
 public class DemoqaSeleniumTest extends BaseSeleniumTest {
-//    private final static String BASE_URL = "https://demoqa.com/";
-//    WebDriver driver = new ChromeDriver();
-//    private static final Logger logger = LogManager.getLogger(DemoqaSeleniumTest.class);
-
-    @Test
-    public void checkChrome() {
-        driver.get(ConfigProvider.URL);
-        PageFactory.initElements(driver, this);
-    }
-
+    private static final Logger logger = LogManager.getLogger(DemoqaSeleniumTest.class);
 
 // 2. Using selenium webdriver to develop smoke autotests for the main page
 
@@ -43,45 +32,47 @@ public class DemoqaSeleniumTest extends BaseSeleniumTest {
         MainPage mainPage = new MainPage();
         String names = mainPage.returnCard();
         String[] actualList = names.split("\n+");
-        System.out.println("Expected "+ Arrays.stream(expectedElements).toList());
-        System.out.println("Actual "+ Arrays.stream(actualList).toList());
+//        System.out.println("Expected "+ Arrays.stream(expectedElements).toList());
+//        System.out.println("Actual "+ Arrays.stream(actualList).toList());
         Assertions.assertArrayEquals(expectedElements, actualList);
-//        logger.info("Assert returns");
+        logger.info("Assert returns 200");
     }
-    //may be since I am in Kazakhstan, server sometimes is reseting connection
-//
-//    /**
-//     * Assert that the first element from the collection consist of the expected entities list
-//     */
-    @Test
-    public void verifyElementPageEntities() throws InterruptedException {
-        String[] expectedList = {"Text Box", "Check Box", "Radio Button", "Web Tables", "Buttons", "Links", "Broken Links - Images", "Upload and Download", "Dynamic Properties"};
-        MainPage mainPage2 = new MainPage();
 
-        mainPage2.clickOnElements();
-//        wait(10000L);
+    /**
+     * Assert that the first element from the collection consists of the expected entities list
+     */
+    @Test
+    public void verifyElementPageEntities() {
+        String[] expectedList = {"Text Box", "Check Box", "Radio Button", "Web Tables", "Buttons", "Links", "Broken Links - Images", "Upload and Download", "Dynamic Properties"};
+        MainPage mainPage = new MainPage();
+//        mainPage.hideAds();
+        mainPage.clickOnElements();
 
         ElementsPage sideBarElements = new ElementsPage();
-        List<String> actualList = sideBarElements.getElementsList().stream().map(WebElement::getText).collect(Collectors.toList());
+        List<String> actualList = sideBarElements.getElementsList().stream().map(WebElement::getText).toList();
         System.out.println("Expected list " + Arrays.stream(expectedList).toList());
-        System.out.println("Actual list " + Arrays.stream(actualList.stream().toArray()).toList());
-        //        List<String> actualList = sideBarElements.getElementsList().stream().map(WebElement::getText).toList();
+        System.out.println("Actual list " + Arrays.stream(actualList.toArray()).toList());
         Assertions.assertArrayEquals(expectedList, actualList.toArray());
+        logger.info("Assert returns 200");
     }
-// первый тест с логированием
 
-
+//    3. Using selenium webdriver to develop a test that handles the Progress Bar
+//    element (waiting for it to complete)
+    /**
+     * Handle the Progress Bar element (waiting for it to complete)
+     */
     @Test
     public void getStartButtonStatus() {
         ProgressBarPage progressBar = new ProgressBarPage();
+//        progressBar.hideAds();
         progressBar.clickStartButton();
         while (progressBar.getStartButton().getText().equals("Stop")) {
-            System.out.println("Do not press " + progressBar.getStartButton().getText());
         }
 
         if(progressBar.getStartButton().getText().equals("Reset")) {
             System.out.println("The status of the button turned to = "+ progressBar.getStartButton().getText() + ", progress bar load is 100%");
         }
+        logger.info("The status of the button turned to = "+ progressBar.getStartButton().getText() + ", progress bar load is 100%");
     }
 
 // 4. Using selenium webdriver to develop a test that selects values from the list //[Red, Green, Purple, Indigo] on the page https://demoqa.com/autocomplete
@@ -93,25 +84,20 @@ public class DemoqaSeleniumTest extends BaseSeleniumTest {
     @Test
     public void pickColorFromList() throws InterruptedException {
         ColorCompletionPage colorCompletionPage = new ColorCompletionPage();
-
         String[] colors = {"Red", "Green", "Purple", "Indigo"};
-
         colorCompletionPage.randomizer(colors);
-        System.out.println("Two random color sets have been selected");
-
-        wait(10000L);
-//        driver.wait(20);
-//        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(10));
+        logger.info("Two random color sets have been selected");
+//        wait(10000L);
 //        driver.wait(10);
-//        int a = 0;
-//        Selenide.sleep(10000L);
 
     }
+//   5. Using selenium webdriver to develop an autotest that fills out a form on the page
 
     @Test
+    // Cергей, подскажи, надо ли еще проверять что всё засетилось? судя по задание надо только заполнить, но наверное надо типо проверить что всё реально засетилось
+
     void fillFormTest() throws InterruptedException, URISyntaxException {
         RegistrationPage registrationPage = new RegistrationPage();
-//        wait(10000L);
        String firstName = "Ivan";
        String lastName = "Ivanov";
        String userEmailInput = "Ivan.Ivanov@mail.ru";
@@ -141,14 +127,15 @@ public class DemoqaSeleniumTest extends BaseSeleniumTest {
         registrationPage.uploadPicture(fileName);
         registrationPage.setBirthDate(birthdayYear, birthdayMonth, birthdayDate);
         registrationPage.clickSubmitButton();
-
+        logger.info("The form is fully filled");
     }
-@Test
 
 // Cерег привет. Слушай, не могу победить вот этот warning org.openqa.selenium.remote.http.WebSocket$Listener onError
 // посмотрел, что даже на stack overflow с такой же проблемой люди сталкиваются https://stackoverflow.com/questions/76782505/how-i-can-fix-this-warning-org-openqa-selenium-remote-http-websocketlistener-on
+
+@Test
+//may be since I am in Kazakhstan, server sometimes is reseting connection
     void mainTest() {
-        MainPage mainPage3 = new MainPage();
         HttpClient client = HttpClients.createDefault();
         HttpGet request = new HttpGet("https://demoqa.com/");
 
@@ -159,5 +146,4 @@ public class DemoqaSeleniumTest extends BaseSeleniumTest {
             e.printStackTrace();
         }
     }
-
 }
